Force GC for Classes, set min heap to 1G